# recipes

pallets/shared-balance/: Cargo.toml
pallets/shared-balance/src/: lib.rs
runtimes/super-runtime/: Cargo.toml
runtimes/super-runtime/src/: lib.rs
traits/balances-s/: Cargo.toml
traits/balances-s/src/: lib.rs
