[package]
name = "balances-s"
version = "2.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A trait that supplies an alternate balances module for use in a Substrate runtime"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"trait",
	"accounts",
	"recipe",
]
compatibility_version = "2.0.0"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
# sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
# sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
# frame-benchmarking = { version = "2.0.0", default-features = false, path = "../benchmarking", optional = true }
# frame-support = { version = "2.0.0", default-features = false, path = "../support" }
# frame-system = { version = "2.0.0", default-features = false, path = "../system" }

frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }

[dev-dependencies]
# sp-io = { version = "2.0.0", path = "../../primitives/io" }
# sp-core = { version = "2.0.0", path = "../../primitives/core" }
# pallet-transaction-payment = { version = "2.0.0", path = "../transaction-payment" }

sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
pallet-transaction-payment = {version = '2.0.0', default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	#"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]